# coursework_back

./: .envexample  .gitignore  main.py  manage.py  pyproject.toml
config/: nginx  supervisor.conf
core/: asgi.py  settings.py  urls.py
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_article_picture.py  0003_auto_20230621_2140.py
pictures/: admin.py  models.py  serializers.py  urls.py  views.py
pictures/migrations/: 0001_initial.py
static/: articles.json
